# it-solutions

./: .env.template  .gitignore  README.md  docker-compose.yml  pyproject.toml
core/: Dockerfile  config.py  exceptions.py  main.py
core/alembic/: env.py
core/alembic/versions/: 2024_07_29_1359-c2838cb87919_add_table_user.py  2024_07_29_1513-06dc339c2a15_add_table_advertisement.py
core/api/: __init__.py
core/api/v1/: __init__.py  advertisement.py  auth.py
core/crud/: ad_crud.py  user_crud.py
core/models/: __init__.py  advertisement.py  db_helper.py  user.py
core/schemas/: ad_scheme.py  user_scheme.py
core/services/: ad_service.py  auth_service.py
