[tool.poetry]
name = "it-solutions"
version = "0.1.0"
description = ""
authors = ["Danila Tretiakov <daniyatretyakov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
uvicorn = {extras = ["standard"], version = "^0.30.3"}
pydantic = {extras = ["email"], version = "^2.8.2"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
asyncpg = "^0.29.0"
alembic = "^1.13.2"
aioredis = "^2.0.1"
redis = "^5.0.7"
black = "^24.4.2"
pydantic-settings = "^2.3.4"
bcrypt = "^4.2.0"
requests = "^2.32.3"

